# LinuxNaturallySpeaking

./: readme.md
Linux_Client/: LinuxNaturallySpeakingClient.pro  dbusobj.cpp  dbusobj.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  textlistner.cpp  textlistner.h
Windows_Server/: LinuxNaturallySpeakingServer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytextedit.cpp  mytextedit.h  readme.md  textserver.cpp  textserver.h
kate_plugin_text_view/: CMakeLists.txt  ktexteditor_textview.desktop  readme.md  textview.cpp  textview.h  textviewui.rc
